<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context="android.AngeloAzcorra.com.GeoActivity">


        <TextView
            android:id="@+id/texto_pregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_pregunta"/>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/texto_boton_cierto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_boton_cierto"/>
            <Button
                android:id="@+id/texto_boton_falso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_boton_falso"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/boton_anterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_boton_anterior"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/boton_Siguiente"
                android:text="@string/texto_boton_siguiente"/>
            <Button
                android:id="@+id/boton_ver_respuesta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_boton_ver_respuesta"/>

        </LinearLayout>

</LinearLayout>